<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


        <EditText
        android:id="@+id/etFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/First_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

        <EditText
        android:id="@+id/etLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/Last_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

        <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp" />


        <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

        <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

        <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

        <EditText
        android:id="@+id/etAadhar_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/Aadhar_number"
        android:inputType="number"
        android:padding="10dp" />

        <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:text="@string/register"
        android:textColor="@android:color/white" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

        <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

        </LinearLayout>

</ScrollView>
